<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="christopher_fontana.healthyrecipeschristopherfontana.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bruschetta"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgRecipe"
        android:contentDescription="@string/description" />

    <Button
        android:text="@string/btnRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgRecipe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/btnRecipe"
        android:textSize="36sp" />

    <TextView
        android:text="@string/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="40sp"
        android:layout_above="@+id/imgRecipe"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="18dp" />
</RelativeLayout>
